--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,17 @@
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.1</version>
         </dependency>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.4.3</version>
+        </dependency>
     </dependencies>
 
 
